<resources>
    <string name="app_name">run2</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="error_incorrect_password">This password  or username is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="btnListaGare">Back</string>
    <string name="confirm">confirm</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="locality">Locality:</string>
    <string name="dateRace">Date of race:</string>
    <string name="prenExpire">Prenotation Expire:</string>
    <string name="n_max_runner">Max N of runners:</string>
    <string name="distance">Distance:</string>
    <string name="note">Note:</string>
    <string name="timeRace">Time of race:</string>
    <string name="listMember">Member list</string>
    <string name="results">Results</string>
    <string name="nextRaces">Next Races</string>
    <string name="btnBack">Back</string>
    <string name="loggout">loggout</string>
    <string name="waitTxt">getting new files from server</string>
    <string name="infoNotAvaible">INFO NOT AVAIBLE</string>
    <string name="confirmPrenotation">ARE YOU SURE TO BOOK THIS  RACE????</string>
    <string name="prenotationImpossible">PRENOTATION NOT POSSIBLE...</string>
    <string name="confirmedTitle">Booking result...</string>
    <string name="confirmedBody">You\'ve booked succesfully this race!!!</string>
    <string name="reatchedMaxNumRunner">already reatched max num of runners</string>
    <string name="connectionError">connection error</string>
    <string name="negativeBookResoult">not booked the race..</string>
    <string name="urlSite">url</string>

    <integer name="ZERO">0</integer>
    <string name="infoDetailedRace">Race Information</string>
    <string name="raceDetailedInfo">here detailed race info and booking</string>
    <string name="expiredBookTerm">Book date term is expired</string>
    <string name="alreadyBooked">already booked this race</string>
    <string name="fixConnection">fix internet connection before continue</string>
    <string name="loginLabel">Loggin RUN Torvergata</string>
    <string name="listaGareLabel">RACES</string>
    <string name="menuLabel">MENU</string>
    <string name="atHour">At</string>
</resources>
