<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.livio3.run2.DetailedRace">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/localityTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locality"
            android:textColor="@android:color/holo_orange_dark"
            android:textColorHighlight="@android:color/holo_orange_dark"
            android:textColorHint="@android:color/holo_orange_dark"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="187dp" />

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="216dp" />

        <TextView
            android:id="@+id/timeRaceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeRace"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="276dp" />

        <TextView
            android:id="@+id/dateRaceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateRace"
            tools:layout_editor_absoluteY="253dp" />

        <TextView
            android:id="@+id/nameRaceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="185dp" />

        <TextView
            android:id="@+id/distanceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="376dp" />

        <TextView
            android:id="@+id/prenExpireTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prenExpire"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="295dp" />

        <TextView
            android:id="@+id/maxNumRunnerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_max_runner"
            tools:layout_editor_absoluteY="333dp" />

        <TextView
            android:id="@+id/noteTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="314dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/raceImgVBig"
        android:layout_width="315dp"
        android:layout_height="157dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back2Races"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btnListaGare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
