<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corsa"
    android:orientation="vertical">

    <Button
        android:id="@+id/listMember"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        android:text="@string/listMember"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/nextRaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nextRaces"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:text="@string/results"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/loggout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/loggout"
        android:textStyle="bold"
        />
</LinearLayout>